[f] Fixed ScaffoldMessenger error within cupertino

--- a/src/lib/l10n/app_de.arb
+++ b/src/lib/l10n/app_de.arb
@@ -44,5 +44,7 @@
   },
   "correction": "Korrektur",
   "taskRemarkEvaluate": "Bewerten",
-  "taskRemarkPoints": "Punkte"
+  "taskRemarkPoints": "Punkte",
+  "errorTitle": "Fehler",
+  "authenticationError": "Die Anmeldung ist fehlgeschlagen."
 }
