--- a/src/lib/l10n/app_en.arb
+++ b/src/lib/l10n/app_en.arb
@@ -44,5 +44,7 @@
   },
   "correction": "correction",
   "taskRemarkEvaluate": "evaluate",
-  "taskRemarkPoints": "points"
+  "taskRemarkPoints": "points",
+  "errorTitle": "Error",
+  "authenticationError": "The authentication failed."
 }
