[+] Add 0 to 15 grading scheme (oberstufe) [+] Add dropdown button for grading scheme selection

--- a/src/lib/l10n/app_de.arb
+++ b/src/lib/l10n/app_de.arb
@@ -1,12 +1,14 @@
 {
   "newGradingIntervalButton": "Neues Interval",
-  "standardGradingIntervalsButton": "Standardintervalle",
+  "defaultGradingSchemeButton": "Notenschema",
   "gradeColumnHeader": "Note",
   "pointsColumnHeader": "Punkte",
   "gradingIntervalStart": "Von (exklusive)",
   "gradingIntervalEnd": "Bis (inklusive)",
   "saveButton": "Speichern",
   "gradingTableTitle": "Notenschlüssel",
+  "oneToSixGradingScheme": "Klassisch (1-6)",
+  "zeroToFifteenGradingScheme": "Oberstufe (0-15)",
   "appTitle": "SchoolExam",
   "welcomeText": "Willkommen!",
   "pleaseLogin": "Bitte melden Sie sich an, um mit der Korrektur von Prüfungen zu beginnen.",
