--- a/src/lib/l10n/app_en.arb
+++ b/src/lib/l10n/app_en.arb
@@ -1,12 +1,14 @@
 {
   "newGradingIntervalButton": "new interval",
-  "standardGradingIntervalsButton": "default intervals",
+  "defaultGradingSchemeButton": "grading scheme",
   "gradeColumnHeader": "grade",
   "pointsColumnHeader": "points",
   "saveButton": "save",
   "gradingIntervalStart": "from (exclusive)",
   "gradingIntervalEnd": "to (inclusive)",
   "gradingTableTitle": "Grading Table",
+  "oneToSixGradingScheme": "Classic (1-6)",
+  "zeroToFifteenGradingScheme": "Advanced (0-15)",
   "appTitle": "SchoolExam",
   "welcomeText": "Welcome!",
   "pleaseLogin": "Please login to start correcting exams!",
