[~] replaced toDTO() with fromModel() [~] Broke up grading table widget into subclasses [~] Moved default grading scheme logic into helper class [~] Adjusted localization

--- a/src/lib/l10n/app_de.arb
+++ b/src/lib/l10n/app_de.arb
@@ -1,12 +1,13 @@
 {
-  "newGradingIntervalButton": "Neues Interval",
+  "newGradingIntervalButton": "Neues Intervall",
   "defaultGradingSchemeButton": "Notenschema",
-  "gradeColumnHeader": "Note",
-  "pointsColumnHeader": "Punkte",
+  "grade": "Note",
+  "points": "Punkte",
+  "empty": "leer",
   "gradingIntervalStart": "Von (exklusive)",
   "gradingIntervalEnd": "Bis (inklusive)",
-  "saveButton": "Speichern",
-  "gradingTableTitle": "Notenschlüssel",
+  "save": "Speichern",
+  "gradingTable": "Notenschlüssel",
   "oneToSixGradingScheme": "Klassisch (1-6)",
   "zeroToFifteenGradingScheme": "Oberstufe (0-15)",
   "appTitle": "SchoolExam",
