--- a/src/lib/l10n/app_en.arb
+++ b/src/lib/l10n/app_en.arb
@@ -1,12 +1,13 @@
 {
   "newGradingIntervalButton": "new interval",
   "defaultGradingSchemeButton": "grading scheme",
-  "gradeColumnHeader": "grade",
-  "pointsColumnHeader": "points",
-  "saveButton": "save",
+  "grade": "grade",
+  "points": "points",
+  "save": "save",
+  "empty": "empty",
   "gradingIntervalStart": "from (exclusive)",
   "gradingIntervalEnd": "to (inclusive)",
-  "gradingTableTitle": "Grading Table",
+  "gradingTable": "Grading Table",
   "oneToSixGradingScheme": "Classic (1-6)",
   "zeroToFifteenGradingScheme": "Advanced (0-15)",
   "appTitle": "SchoolExam",
