--- a/src/lib/l10n/app_de.arb
+++ b/src/lib/l10n/app_de.arb
@@ -31,7 +31,8 @@
   "examCardTopic": "Fach",
   "examCardParticipants": "Teilnehmende",
   "examCardQuota": "Korrigiert",
-  "examCardButtonReturn": "Rückgabe",
+  "examPublish": "Veröffentlichen",
+  "examPublishDate": "Datum der Veröffentlichung",
   "examCardButtonCorrect": "Korrigieren",
   "examCardButtonUpload": "Hochladen",
   "examCardButtonEdit": "Anpassen",
@@ -41,7 +42,7 @@
   "newExamDate": "Prüfungsdatum",
   "newExamButtonCreate": "Erstellen",
   "newExamButtonEdit": "Anpassen",
-  "newExamButtonCancel": "Abbrechen",
+  "cancel": "Abbrechen",
   "yes": "Ja",
   "no": "Nein",
   "correctionSelectionConfirmWithName": "Möchten sie die Korrektur von {name} öffnen?",
