--- a/src/lib/l10n/app_en.arb
+++ b/src/lib/l10n/app_en.arb
@@ -31,7 +31,8 @@
   "examCardTopic": "topic",
   "examCardParticipants": "# participants",
   "examCardQuota": "quota",
-  "examCardButtonReturn": "return",
+  "examPublish": "publish",
+  "examPublishDate": "publish date",
   "examCardButtonCorrect": "correct",
   "examCardButtonUpload": "upload",
   "examCardButtonEdit": "edit",
@@ -41,7 +42,7 @@
   "newExamDate": "exam date",
   "newExamButtonCreate": "create",
   "newExamButtonEdit": "edit",
-  "newExamButtonCancel": "cancel",
+  "cancel": "cancel",
   "yes": "yes",
   "no": "no",
   "correctionSelectionConfirmWithName": "Do you want to open the correction for student {name}?",
