[+] Included retrieval of courses and made them available for exam creation and update

--- a/src/lib/l10n/app_de.arb
+++ b/src/lib/l10n/app_de.arb
@@ -58,5 +58,6 @@
   "taskRemarkEvaluate": "Bewerten",
   "taskRemarkPoints": "Punkte",
   "errorTitle": "Fehler",
-  "authenticationError": "Die Anmeldung ist fehlgeschlagen."
+  "authenticationError": "Die Anmeldung ist fehlgeschlagen.",
+  "updateExamError": "Die Aktualisierung ist fehlgeschlagen."
 }
