--- a/src/lib/l10n/app_de.arb
+++ b/src/lib/l10n/app_de.arb
@@ -57,7 +57,93 @@
   "correction": "Korrektur",
   "taskRemarkEvaluate": "Bewerten",
   "taskRemarkPoints": "Punkte",
+
+  "loadingTitle": "Lade",
   "errorTitle": "Fehler",
+  "successTitle": "Erfolg",
+
   "authenticationError": "Die Anmeldung ist fehlgeschlagen.",
-  "updateExamError": "Die Aktualisierung ist fehlgeschlagen."
+  "updateExamError": "Die Aktualisierung ist fehlgeschlagen.",
+  "offlineError": "Sie sind offline. Bitte bauen Sie eine funktionierende Internetverbindung auf.",
+
+  "loginAppError": "Während der Anmeldung ist es zu einem internen Fehler gekommen.",
+  "loginInternalError": "Während der Anmeldung ist es zu einem internen Fehler gekommen. Bitte versuchen Sie die Anmeldung später erneut.",
+  "loginBadRequestError": "Sie haben einen ungültigen Benutzernamen oder ein ungültiges Passwort eingegeben.",
+
+  "examDetailsCreationLoading": "Warte auf die Erstellung der Klausur {name}.",
+  "@examDetailsCreationLoading": {
+    "placeholders": {
+      "name": {
+        "type": "String",
+        "example": "Politik 1"
+      }
+    }
+  },
+
+  "examDetailsCreationSuccess": "{name} wurde erfolgreich erstellt.",
+  "@examDetailsCreationSuccess": {
+    "placeholders": {
+      "name": {
+        "type": "String",
+        "example": "Politik 1"
+      }
+    }
+  },
+  "examDetailsCreationAppError": "Während der Erstellung von {name} ist es zu einem internen Fehler gekommen.",
+  "@examDetailsCreationAppError": {
+    "placeholders": {
+      "name": {
+        "type": "String",
+        "example": "Politik 1"
+      }
+    }
+  },
+  "examDetailsCreationInternalError": "Während der Erstellung von {name} ist es zu einem internen Fehler gekommen. Bitte versuchen Sie die Anpassung später erneut.",
+  "@examDetailsCreationInternalError": {
+    "placeholders": {
+      "name": {
+        "type": "String",
+        "example": "Politik 1"
+      }
+    }
+  },
+  "examDetailsCreationBadRequestError": "Die von Ihnen eingegebenen Daten sind ungültig. Bitte überprüfen Sie die Daten und starten die App gegebenenfalls neu.",
+
+  "examDetailsUpdateLoading": "Warte auf die Aktualisierung von {name}.",
+  "@examDetailsUpdateLoading": {
+    "placeholders": {
+      "name": {
+        "type": "String",
+        "example": "Politik 1"
+      }
+    }
+  },
+  "examDetailsUpdateSuccess": "{name} wurde erfolgreich aktualisiert.",
+  "@examDetailsUpdateSuccess": {
+    "placeholders": {
+      "name": {
+        "type": "String",
+        "example": "Politik 1"
+      }
+    }
+  },
+  "examDetailsUpdateAppError": "Während der Anpassung von {name} ist es zu einem internen Fehler gekommen.",
+  "@examDetailsUpdateAppError": {
+    "placeholders": {
+      "name": {
+        "type": "String",
+        "example": "Politik 1"
+      }
+    }
+  },
+  "examDetailsUpdateInternalError": "Während der Anpassung von {name} ist es zu einem internen Fehler gekommen. Bitte versuchen Sie die Anpassung später erneut.",
+  "@examDetailsUpdateInternalError": {
+    "placeholders": {
+      "name": {
+        "type": "String",
+        "example": "Politik 1"
+      }
+    }
+  },
+  "examDetailsUpdateBadRequestError": "Die von Ihnen eingegebenen Daten sind ungültig. Bitte überprüfen Sie die Daten und starten die App gegebenenfalls neu."
 }
