--- a/src/lib/l10n/app_en.arb
+++ b/src/lib/l10n/app_en.arb
@@ -57,7 +57,91 @@
   "correction": "correction",
   "taskRemarkEvaluate": "evaluate",
   "taskRemarkPoints": "points",
+
+  "loadingTitle": "Loading",
   "errorTitle": "Error",
+  "successTitle": "Success",
+
   "authenticationError": "The authentication failed.",
-  "updateExamError": "The update failed."
+  "updateExamError": "The update failed.",
+  "offlineError": "You are offline. Please establish a working internet connection.",
+  "loginAppError": "An internal error occurred during the registration process.",
+  "loginInternalError": "An internal error occurred during the registration process. Please try the login again later.",
+  "loginBadRequestError": "You have entered an invalid user name or password.",
+
+  "examDetailsCreationLoading": "Waiting for the creation of the exam {name}.",
+  "@examDetailsCreationLoading": {
+      "placeholders": {
+        "name": {
+          "type": "String",
+          "example": "Politics 1"
+        }
+      }
+  },
+  "examDetailsCreationSuccess": "{name} was successfully created.",
+  "@examDetailsCreationSuccess": {
+      "placeholders": {
+        "name": {
+          "type": "String",
+          "example": "Politics 1"
+        }
+      }
+  },
+  "examDetailsCreationAppError": "During the creation of {name}, an internal error occurred.",
+  "@examDetailsCreationAppError": {
+      "placeholders": {
+        "name": {
+          "type": "String",
+          "example": "Politics 1"
+        }
+      }
+  },
+  "examDetailsCreationInternalError": "During the creation of {name}, an internal error occurred. Please try the adjustment again later.",
+  "@examDetailsCreationInternalError": {
+      "placeholders": {
+        "name": {
+          "type": "String",
+          "example": "Politics 1"
+        }
+      }
+  },
+  "examDetailsCreationBadRequestError": "The data you entered is invalid. Please check the data and restart the app if necessary.",
+
+  "examDetailsUpdateLoading": "Waiting for the update of {name}.",
+  "@examDetailsUpdateLoading": {
+    "placeholders": {
+      "name": {
+        "type": "String",
+        "example": "Politics 1"
+      }
+    }
+  },
+  "examDetailsUpdateSuccess": "{name} has been successfully updated.",
+  "@examDetailsUpdateSuccess": {
+    "placeholders": {
+      "name": {
+        "type": "String",
+        "example": "Politics 1"
+      }
+    }
+  },
+  "examDetailsUpdateAppError": "During the adjustment of {name}, an internal error occurred.",
+  "@examDetailsUpdateAppError": {
+    "placeholders": {
+      "name": {
+        "type": "String",
+        "example": "Politics 1"
+      }
+    }
+  },
+  "examDetailsUpdateInternalError": "During the adjustment of {name}, an internal error occurred. Please try the adjustment again later.",
+  "@examDetailsUpdateInternalError": {
+    "placeholders": {
+      "name": {
+        "type": "String",
+        "example": "Politics 1"
+      }
+    }
+  },
+  "examDetailsUpdateBadRequestError": "The data you entered is invalid. Please check the data and restart the app if necessary."
 }
