[f] Fix different background within update dialog [~] Switched columns within grading table [~] Greyed out grading table column

--- a/src/lib/l10n/app_de.arb
+++ b/src/lib/l10n/app_de.arb
@@ -4,8 +4,8 @@
   "grade": "Note",
   "points": "Punkte",
   "empty": "leer",
-  "gradingIntervalStart": "Von (exklusive)",
-  "gradingIntervalEnd": "Bis (inklusive)",
+  "gradingIntervalStart": "Von (inklusive)",
+  "gradingIntervalEnd": "Bis (exklusive)",
   "save": "Speichern",
   "gradingTable": "Notenschlüssel",
   "oneToSixGradingScheme": "Klassisch (1-6)",
