--- a/src/lib/l10n/app_en.arb
+++ b/src/lib/l10n/app_en.arb
@@ -5,8 +5,8 @@
   "points": "points",
   "save": "save",
   "empty": "empty",
-  "gradingIntervalStart": "from (exclusive)",
-  "gradingIntervalEnd": "to (inclusive)",
+  "gradingIntervalStart": "from (inclusive)",
+  "gradingIntervalEnd": "to (exclusive)",
   "gradingTable": "Grading Table",
   "oneToSixGradingScheme": "Classic (1-6)",
   "zeroToFifteenGradingScheme": "Advanced (0-15)",
